[BuildSystem] Massive update for BOSP integration
This is a patch collecting a massive update of the Barbeque internal building
system to preprare the ground for BOSP source tree intgration.

Mainly, this patch:
1. make use of a cmake configuration-time defined output folder, which by
default is the "out" subfolder of the building directory,
(i.e. build/Debug/out and build/Release/out);
2. restyle the main CMakeList file by adding the definitions of the
installation paths and a useful report on the configuraiton options;
3. collect common configuration options (e.g. CMAKE_CXX_FLAGS) to the top
level file;
4. (for the time being) removed documentation compilation and packagin
support, which will be properly introduced in a later version;
5. add proper installation targets for the RTRM, RTLib, headers and
configuration files;
6. rename the RTRM plugins to have a name starting with "bbque" instead of
"plugin", thus producin modules shared objects whit a more friendly name
beginning with "libbbq_";
7. use a cmake configuration defined location for the RPC FIFO, based on the
values defined by CMAKE_INSTALL_PREFIX and BBQUE_PATH_VAR;

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -16,19 +16,25 @@ test_time = 1
 # Recipes Loader Options
 ################################################################################
 [rloader]
-xml.recipe_dir = /etc/bbque/recipes
+xml.recipe_dir = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_RECIPES}
 
 ################################################################################
 # RPC Channel Options
 ################################################################################
 [rpc]
-fif.dir = /var/bbque
+fif.dir = ${CMAKE_INSTALL_PREFIX}/var/bbque
+
+################################################################################
+# Resource Scheduler Options
+################################################################################
+[ResourceScheduler]
+policy = yamca
 
 ################################################################################
 # Logger Options
 ################################################################################
 [logger]
-log4cpp.conf_file = /etc/bbque/bbque.conf
+log4cpp.conf_file = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_CONF}/bbque.conf
 
 ################################################################################
 # Log4CPP Logger Configuration
@@ -38,34 +44,43 @@ log4cpp.conf_file = /etc/bbque/bbque.conf
 # Set root category priority and its appender
 # By default all logs are only from level greater than or equal to INFO
 ###
-#rootCategory = INFO, raFile
+rootCategory = INFO, raFile
+#rootCategory = INFO, raConsole
 #rootCategory = INFO, raSyslog
-rootCategory = INFO, raConsole
 #rootCategory = INFO, raRSyslog
 ###
 # Uncomment each of the following lines for subsystems you want
 # to redefine the category priority to a value diffent from that of
 # the rootCategory
 ###
-category.bq = 		DEBUG
-category.bq.Test =	DEBUG
-category.bq.pm =	DEBUG
-category.bq.rm = 	DEBUG
-category.bq.ap = 	DEBUG
-category.bq.sig = 	DEBUG
-category.rpc   = 	DEBUG
-category.rpc.fif  = 	DEBUG
-category.rpc.prx  = 	DEBUG
+#category.bq = 		DEBUG
+#category.bq.Test =	DEBUG
+#category.bq.pm =	DEBUG
+#category.bq.rm = 	DEBUG
+#category.bq.sm = 	DEBUG
+#category.bq.ra = 	DEBUG
+#category.bq.ap = 	DEBUG
+#category.bq.tpd = 	DEBUG
+#category.ap = 		DEBUG
+#category.ap.awm =	DEBUG
+#category.ap.exc =	DEBUG
+#category.rpc   = 	DEBUG
+#category.test   = 	DEBUG
+#category.rpc.fif  = 	DEBUG
+#category.rpc.prx  = 	DEBUG
+#category.rloader = 	DEBUG
+#category.sched.pol = 	DEBUG
+#category.sync.pol = 	DEBUG
 ###
 # Root Appender
 ###
 appender.raConsole = org.apache.log4j.ConsoleAppender
 appender.raConsole.layout = org.apache.log4j.PatternLayout
 appender.raConsole.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-10c : %m%n
-#appender.raFile = org.apache.log4j.FileAppender
-#appender.raFile.fileName = /var/log/bbque.log
-#appender.raFile.layout = org.apache.log4j.PatternLayout
-#appender.raFile.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
+appender.raFile = org.apache.log4j.FileAppender
+appender.raFile.fileName = ${CMAKE_INSTALL_PREFIX}/var/log/bbque.log
+appender.raFile.layout = org.apache.log4j.PatternLayout
+appender.raFile.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
 #appender.raSyslog = org.apache.log4j.SyslogAppender
 #appender.raSyslog.layout = org.apache.log4j.PatternLayout
 #appender.raSyslog.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
