--- a/plugins/logger/CMakeLists.txt
+++ b/plugins/logger/CMakeLists.txt
@@ -10,13 +10,12 @@ link_directories(${log4cpp_LIBRARY_DIRS})
 
 #----- Add target static library
 set(PLUGIN_LOG4CPP_SRC  log4cpp_logger log4cpp_plugin)
-add_library(plugin_logger_log4cpp STATIC ${PLUGIN_LOG4CPP_SRC})
+add_library(bbque_logger_log4cpp STATIC ${PLUGIN_LOG4CPP_SRC})
 
 #----- Add library specific flags
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
-# Linking dependencies
-target_link_libraries(plugin_logger_log4cpp ${LOG4CPP_LIBRARIES})
+#----- Linking dependencies
+target_link_libraries(bbque_logger_log4cpp ${LOG4CPP_LIBRARIES})
 
