--- a/plugins/rloader/CMakeLists.txt
+++ b/plugins/rloader/CMakeLists.txt
@@ -1,36 +1,21 @@
 
 #----- Check for required TiCPP library
-#
-# TiCPP is a C++ wrapper for library TinyXML
+find_package(TiCPP REQUIRED)
 
-find_path(TICPP_INCLUDE_DIRS ticpp.h tinyxml.h
-	PATHS
-		"$ENV{LOG4CPP}/include"
-		/usr/local/include
-		/usr/include
-)
+# Add compilation dependencies
+include_directories(${ticpp_INCLUDE_DIRS})
 
-find_library(TICPP_LIBRARIES ticpp
-	PATHS
-		"$ENV{LOG4CPP}/lib"
-		/usr/local/lib
-		/usr/lib
-		)
-
-if (TICPP_INCLUDE_DIRS)
-	if (TICPP_LIBRARIES)
-		include_directories(${TICPP_INCLUDE_DIRS})
-		link_directories(${TICPP_LIBRARIES})
-		message("-- Found TiCPP")
-	endif (TICPP_LIBRARIES)
-endif (TICPP_INCLUDE_DIRS)
+# Add linking dependencies
+link_directories(${ticpp_LIBRARY_DIRS})
 
 #----- Add target static library
 set(PLUGIN_RECIPELOAD_XML_SRC  xml_rloader xml_plugin)
-add_library(plugin_recipe_loader_xml STATIC ${PLUGIN_RECIPELOAD_XML_SRC})
+add_library(bbque_recipe_loader_xml STATIC ${PLUGIN_RECIPELOAD_XML_SRC})
 
 #----- Add library specific flags
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
-# Linking dependencies
-target_link_libraries(plugin_recipe_loader_xml ${TICPP_LIBRARIES})
+#----- Linking dependencies
+target_link_libraries(bbque_recipe_loader_xml ${TICPP_LIBRARIES})
+
