[BuildSystem] Add RPATH support to barbeque binary
This patch avoid to strip RPATH info when the barbeque binary is
installed. This allow to run the Barbeque RTRM from within the
compilation/installation folder without any need to define by hand an
LD_LIBRARY_PATH.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -78,6 +78,9 @@ target_link_libraries(
 	-Wl,-whole-archive bbque_recipe_loader_xml -Wl,-no-whole-archive
 )
 
+# Use link path ad RPATH
+set_property(TARGET barbeque PROPERTY INSTALL_RPATH_USE_LINK_PATH TRUE)
+
 # Install the Barbeque target
 install (TARGETS barbeque RUNTIME
 		DESTINATION ${BBQUE_PATH_BBQ}
