[RTLIB] Embeds the C++ AEM base class into the RTLIB
The BbqueEXC base class implementing the Abstract Execution Model (AEB) is
moved into the RTLib so that it is available to all application developers
by simply linking the Barbeque run-time library.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -24,6 +24,7 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
 set (RTLIB_SRC bbque_rtlib bbque_rpc ${PROJECT_BINARY_DIR}/bbque/version.cc)
+set (RTLIB_SRC bbque_exc ${RTLIB_SRC})
 if(BBQUE_RPC_FIFO)
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBBQUE_RPC_FIFO")
 	set (RTLIB_SRC rpc_fifo_client ${RTLIB_SRC})
@@ -43,8 +44,9 @@ target_link_libraries(
 # Install the RTLib
 set_property (TARGET bbque_rtlib PROPERTY
 		FRAMEWORK ON)
-set_property (TARGET bbque_rtlib PROPERTY
-		PUBLIC_HEADER ${PROJECT_SOURCE_DIR}/include/bbque/rtlib.h)
+set_property (TARGET bbque_rtlib PROPERTY PUBLIC_HEADER
+		${PROJECT_SOURCE_DIR}/include/bbque/rtlib.h
+		${PROJECT_SOURCE_DIR}/include/bbque/rtlib/bbque_exc.h)
 install (TARGETS bbque_rtlib LIBRARY
 		DESTINATION ${BBQUE_PATH_RTLIB}
 		PUBLIC_HEADER DESTINATION ${BBQUE_PATH_HEADERS}
