--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ project (BarbequeRTRM)
 set (BBQUE_PATH_BBQ     "sbin")
 set (BBQUE_PATH_CONF    "etc/bbque")
 set (BBQUE_PATH_RECIPES "etc/bbque/recipes")
-set (BBQUE_PATH_HEADERS "usr/include/bbque")
-set (BBQUE_PATH_RTLIB   "usr/lib/bbque")
-set (BBQUE_PATH_PLUGINS "usr/lib/bbque/plugins")
+set (BBQUE_PATH_HEADERS "include/bbque")
+set (BBQUE_PATH_RTLIB   "lib/bbque")
+set (BBQUE_PATH_PLUGINS "lib/bbque/plugins")
 set (BBQUE_PATH_DOCS    "usr/share/bbque")
 set (BBQUE_PATH_VAR     "var/bbque")
 
