[RS] Rename ResourceScheduler into SchedulerManager
For consistency with the overall framework design, this patch rename the
ResourceScheduler into SchedulerManager (SM). Indeed, like the
SynchronizationManager the SM is a proxy to trigger a (resource) scheduling
policy.

For consistency, the namespace of this Barbeque component has been updated
to be "bq.sm"; thus, in order to avoid collisions, the namespace of the
synchronization manager has been updated to be "bq.ym" and from hencefort
the SynchronizationManager will be referred as YM module.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -25,10 +25,10 @@ xml.recipe_dir = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_RECIPES}
 fif.dir = ${CMAKE_INSTALL_PREFIX}/var/bbque
 
 ################################################################################
-# Resource Scheduler Options
+# Scheduler Manager Options
 ################################################################################
-[ResourceScheduler]
-policy = yamca
+[SchedulerManager]
+#policy = yamca
 
 ################################################################################
 # Logger Options
@@ -58,6 +58,7 @@ rootCategory = INFO, raFile
 #category.bq.pm =	DEBUG
 #category.bq.rm = 	DEBUG
 #category.bq.sm = 	DEBUG
+#category.bq.ym = 	DEBUG
 #category.bq.ra = 	DEBUG
 #category.bq.ap = 	DEBUG
 #category.bq.tpd = 	DEBUG
