[CM] Update plugins folder option
The default plugins folder is not defined by the building system, at CMake
configuration time. This patch keeps track of the defined configuration and
set also this as default both for the command line option and the configuration
file.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -7,10 +7,10 @@
 
 
 ################################################################################
-# Debugging Options
+# Generic Options
 ################################################################################
-[debug]
-test_time = 1
+[bbque]
+#plugins = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_PLUGINS}
 
 ################################################################################
 # Recipes Loader Options
