--- a/config/bbque.conf_dbg.in
+++ b/config/bbque.conf_dbg.in
@@ -7,10 +7,10 @@
 
 
 ################################################################################
-# Debugging Options
+# Generic Options
 ################################################################################
-[debug]
-test_time = 1
+[bbque]
+#plugins = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_PLUGINS}
 
 ################################################################################
 # Recipes Loader Options
