--- a/config/bbque.conf.in
+++ b/config/bbque.conf.in
@@ -16,13 +16,13 @@
 # Recipes Loader Options
 ################################################################################
 [rloader]
-xml.recipe_dir = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_RECIPES}
+#xml.recipe_dir = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_RECIPES}
 
 ################################################################################
 # RPC Channel Options
 ################################################################################
 [rpc]
-fif.dir = ${CMAKE_INSTALL_PREFIX}/var/bbque
+#fif.dir = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_VAR}
 
 ################################################################################
 # Scheduler Manager Options
@@ -31,10 +31,16 @@ fif.dir = ${CMAKE_INSTALL_PREFIX}/var/bbque
 #policy = yamca
 
 ################################################################################
+# Synchronization Manager Options
+################################################################################
+[SynchronizationManager]
+#policy = sasb
+
+################################################################################
 # Logger Options
 ################################################################################
 [logger]
-log4cpp.conf_file = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_CONF}/bbque.conf
+#log4cpp.conf_file = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_CONF}/bbque.conf
 
 ################################################################################
 # Log4CPP Logger Configuration
@@ -65,10 +71,10 @@ rootCategory = INFO, raFile
 #category.ap = 		DEBUG
 #category.ap.awm =	DEBUG
 #category.ap.exc =	DEBUG
-#category.rpc   = 	DEBUG
-#category.test   = 	DEBUG
-#category.rpc.fif  = 	DEBUG
-#category.rpc.prx  = 	DEBUG
+#category.rpc = 	DEBUG
+#category.test = 	DEBUG
+#category.rpc.fif = 	DEBUG
+#category.rpc.prx = 	DEBUG
 #category.rloader = 	DEBUG
 #category.sched.pol = 	DEBUG
 #category.sync.pol = 	DEBUG
@@ -79,7 +85,7 @@ appender.raConsole = org.apache.log4j.ConsoleAppender
 appender.raConsole.layout = org.apache.log4j.PatternLayout
 appender.raConsole.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-10c : %m%n
 appender.raFile = org.apache.log4j.FileAppender
-appender.raFile.fileName = ${CMAKE_INSTALL_PREFIX}/var/log/bbque.log
+appender.raFile.fileName = ${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_VAR}/bbque.log
 appender.raFile.layout = org.apache.log4j.PatternLayout
 appender.raFile.layout.ConversionPattern = %d{%Y-%m-%d %H:%M:%S,%l} - %-6p %-40c : %m%n
 #appender.raSyslog = org.apache.log4j.SyslogAppender
