[RTLIB] Deploy headers under utils with the RTLib
All the header files present under the utils folder are deployed with the
RTLib. Indeed, these files should provide services which are available both
to Barbeque and application developers as well.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -51,4 +51,8 @@ install (TARGETS bbque_rtlib LIBRARY
 		DESTINATION ${BBQUE_PATH_RTLIB}
 		PUBLIC_HEADER DESTINATION ${BBQUE_PATH_HEADERS}
 		COMPONENT BarbequeRTLib)
+install(DIRECTORY "${PROJECT_SOURCE_DIR}/include/bbque/utils"
+		DESTINATION "${BBQUE_PATH_HEADERS}"
+		FILES_MATCHING PATTERN "*.h")
+
 
