[BuildSystem] Update BBQUE_DEBUG compilation flag
This patch removes the config.h defined BBQUE_DEBUG and place it directly at
command line for the DEBUG profile. This allows to make it visible to
all Barbeque sources, even if they do not include the utility file.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ endif (NOT CMAKE_BUILD_TYPE)
 set (CMAKE_CXX_FLAGS "-std=c++0x -Wall")
 
 # Options for build version: DEBUG
-set (CMAKE_CXX_FLAGS_DEBUG "-g -Wextra -pedantic")
+set (CMAKE_CXX_FLAGS_DEBUG "-g -Wextra -pedantic -DBBQUE_DEBUG")
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
 	set (BBQUE_DEBUG ON)
 endif (CMAKE_BUILD_TYPE STREQUAL "Debug")
