Disable test subfolder
This patch disable the building of the test subfolder to easy the migration
to the new map locking support.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,6 +1,6 @@
 
 #----- Add test plugins
-add_subdirectory(test)
+#add_subdirectory(test)
 add_subdirectory(logger)
 add_subdirectory(rloader)
 add_subdirectory(schedpol)
