[BuildSystem] Bugfixed DL and RT library linking
This patch ensures that libdl and librt are linker as last object for both
the two client modules: barbeque and rtlib. This should be a more portable
configuration.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/bbque/CMakeLists.txt
+++ b/bbque/CMakeLists.txt
@@ -6,7 +6,7 @@ configure_file (
 )
 
 # Add "barbeque" specific flags
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -ldl")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 # This flags should be used only when a monolitic build profile will be defined
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 #set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
@@ -63,6 +63,7 @@ target_link_libraries(
 	barbeque
 	-Wl,-whole-archive bbque_logger_log4cpp -Wl,-no-whole-archive
 	-Wl,-whole-archive bbque_recipe_loader_xml -Wl,-no-whole-archive
+	-ldl -lrt
 )
 
 # Use link path ad RPATH
