--- a/rtlib/CMakeLists.txt
+++ b/rtlib/CMakeLists.txt
@@ -6,7 +6,7 @@ configure_file (
 )
 
 # Add "barbeque" specific flags
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -ldl")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffunction-sections -fdata-sections")
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,--gc-sections")
 
@@ -26,6 +26,7 @@ target_link_libraries(
 	bbque_rtlib
 	bbque_utils
 	${Boost_LIBRARIES}
+	-ldl -lrt
 )
 
 # Use link path ad RPATH
