--- a/tools/bbqueConsole.sh.in
+++ b/tools/bbqueConsole.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Source the BOSP Shell configuration
-source @CMAKE_INSTALL_PREFIX@/etc/bbque/bosp_init.env
+. @CONFIG_BOSP_RUNTIME_PATH@/etc/bbque/bosp_init.env
 
 # CONSOLE CONFIGURATION
 BBQUE_SYSROOT="${BBQUE_SYSROOT:-$SYSROOT}"
