--- a/tools/bbqueStressTest.sh.in
+++ b/tools/bbqueStressTest.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # Source the daemon configuration settings
-. @CMAKE_INSTALL_PREFIX@/etc/default/bbqued
+. @CONFIG_BOSP_RUNTIME_PATH@/etc/default/bbqued
 
 # STRESS-TEST CONFIGURATION
 BBQUE_SYSROOT="${BBQUE_SYSROOT:-$SYSROOT}"
