[Attributes] New base class for managing attributes
"Attributes" are considered as specific information coming from a plugin
or hardware platform features, or other.

For this purpose the old class PluginsData (under bbque::app) will be
replaced by class AttributesContainer, housed under bbque::utils
namespace. Objects/descriptors aiming to provide the support for
attributes should derive from AttributesContainer.

Attributes itselves are handled by definining a structure extending the
base struct Attribute_t, by adding at least its own data member. This
in order to support different type of attribute data (integer, char
strings, ...). Basically the base struct provides a namespace and a
key identifier for the attribute, while is up to the derived struct to
introduce a data member to store the information/value.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/bbque/utils/CMakeLists.txt
+++ b/bbque/utils/CMakeLists.txt
@@ -3,7 +3,7 @@
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++0x -lrt -fPIC")
 
 # Add sources in the current directory to the target binary
-set (BBQUE_UTILS_SRC timer metrics_collector perf)
+set (BBQUE_UTILS_SRC timer metrics_collector perf attributes_container)
 
 #Add as library
 add_library(bbque_utils STATIC ${BBQUE_UTILS_SRC})
