[Application/Recipe] PluginsData replaced by AttributesContainer
The interface for the plugins specific data has been replaced by the
more general new AttributesContainer interface.

Signed-off-by: Giuseppe Massari <joe.massanga@gmail.com>

--- a/bbque/app/CMakeLists.txt
+++ b/bbque/app/CMakeLists.txt
@@ -19,8 +19,9 @@ set (BBQUE_DEBUG ON)
 set (APPLICATION_SRC application)
 set (APPLICATION_SRC working_mode ${APPLICATION_SRC})
 set (APPLICATION_SRC recipe ${APPLICATION_SRC})
-set (APPLICATION_SRC plugin_data ${APPLICATION_SRC})
 
 #Add as library
 add_library(application_objs STATIC ${APPLICATION_SRC})
 
+#Link static library
+target_link_libraries(application_objs bbque_utils)
